# spc-ops

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  index.html  package-lock.json  package.json
.claude/: launch.json
data-gen/: pyproject.toml
data-gen/data_gen/: build.py  engine.py  io_writer.py  limits.py  patterns.py  schema.py
data-gen/data_gen/scenarios/: filament-screw-starvation.yaml  pipe-diameter-drift.yaml
eval-transcripts/: .gitignore  README.md
src/: App.css  App.tsx  index.css
src/components/: AppHeader.css  AppHeader.tsx  ChartPanel.css  ChartPanel.tsx  LogsPanel.css  LogsPanel.tsx  ObjectivesPanel.css  ObjectivesPanel.tsx  TutorPanel.css  TutorPanel.tsx
src/data/: demoScenario.ts  types.ts
src/data/scenarios/: filament-screw-starvation.json  index.ts  pipe-diameter-drift-demo.json
src/services/: socraticPrompt.ts  tutor.ts
